:heavy_plus_sign: update Cargo.toml
forgot to add this to the last commit...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ lto = true
 #default = ["wee_alloc"]
 
 [dependencies]
+rand = "0.7"
+arrayvec = "0.5"
+
 # The `wasm-bindgen` crate provides the bare minimum functionality needed
 # to interact with JavaScript.
 wasm-bindgen = "0.2.67"
