--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 14
       - name: Build
-        run: npm install && npm build
+        run: npm install && npm run build
       - name: Publish
         uses: peaceiris/actions-gh-pages@v3
         with:
