--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ lto = true
 [dependencies]
 rand = "0.7"
 arrayvec = "0.5"
+serde_json = "1.0"
 
 # The `wasm-bindgen` crate provides the bare minimum functionality needed
 # to interact with JavaScript.
