--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,9 @@ lto = true
 [dependencies]
 rand = "0.7"
 arrayvec = "0.5"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_repr = "0.1"
 
 # The `wasm-bindgen` crate provides the bare minimum functionality needed
 # to interact with JavaScript.
